<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/_8sdp"
        tools:context=".UpdateNoteFragment">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/poppins"
            android:text="@string/editNote"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/title"
            android:textColorHint="#565555"
            android:paddingHorizontal="@dimen/_8sdp"
            android:textSize="20sp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:layout_below="@id/editNoteHeading"
            android:background="@drawable/blue_border"
            android:layout_marginTop="@dimen/_1sdp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:hint="@string/des"
            android:textColorHint="#565555"
            android:gravity="top"
            android:padding="@dimen/_8sdp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:background="@drawable/blue_border"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginTop="@dimen/_8sdp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:clickable="true"
            android:backgroundTint="#208CE2"
            android:focusable="true"
            android:tintMode="@color/white"
            android:src="@drawable/done"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image" />

    </RelativeLayout>
</layout>