<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewNoteFragment"
        android:background="@color/white"
        android:padding="12dp">

        <TextView
            android:id="@+id/addNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/poppins"
            android:text="@string/addNote"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/addNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:hint="@string/title"
            android:padding="@dimen/_8sdp"
            android:textSize="20sp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#565555"
            android:layout_below="@id/addNoteHeading"
            android:background="@drawable/blue_border"
            android:layout_marginTop="@dimen/_1sdp"
            android:maxLines="1"
            android:fontFamily="@font/poppins"/>

        <EditText
            android:id="@+id/addNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp"
            android:hint="@string/des"
            android:textColorHint="#565555"
            android:gravity="top"
            android:padding="@dimen/_8sdp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins"
            android:background="@drawable/blue_border"
            android:layout_below="@id/addNoteTitle"
            android:layout_marginTop="@dimen/_8sdp" />

    </RelativeLayout>
</layout>